# pplp

./: Makefile.in  README.md  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
include/: pplp_apronInterface.h  pplp_double.h  pplp_glpkInterface.h  pplp_ioInterface.h  pplp_plp.h  pplp_point.h  pplp_polyhedron.h  pplp_ray.h  pplp_raytracing.h  pplp_simple_concurrent_vector.h  pplp_simplex.h  pplp_tbbParallel.h  pplp_tool.h
src/: Makefile.am  Makefile.in
src/core/: pplp_double.cc  pplp_ioInterface.cc  pplp_point.cc  pplp_polyhedron.cc  pplp_tool.cc
src/plp/: pplp_plp.cc  pplp_simplex.cc  pplp_tbbParallel.cc
src/raytracing/: pplp_ray.cc  pplp_raytracing.cc
src/thirdpart/: pplp_apronInterface.cc  pplp_glpkInterface.cc
test/: Makefile.am  Makefile.in  test_apron.cc  test_convexhull.cc  test_convexhull_apron.cc  test_equality.cc  test_exact.cc  test_inclusion.cc  test_minimize.cc  test_minimize_apron.cc  test_minimize_simple.cc  test_plp.cc  test_projection.cc  test_projection_apron.cc  test_witness.cc  unit_test.cc
testfiles/: P_10_3_5_1.poly  P_5_1_2_0.poly  plp3.poly
